# parions-sport-odds-mcp

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
documents/mcp/: SECURITY.md
documents/mcp/github/: README.md
src/parions_sport_mcp/: __init__.py  errors.py  fdj_client.py  matching.py  repository.py  results_client.py  server.py
tests/: conftest.py  test_fdj_client.py  test_live_fdj.py  test_matching.py  test_repository.py  test_results_client.py  test_tools.py
