[project]
name = "parions-sport-mcp"
version = "0.1.1"
description = "MCP server exposing current Parions Sport Point de Vente odds from the official FDJ offer database."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Codex" }]
keywords = [
  "mcp",
  "model-context-protocol",
  "parions-sport",
  "fdj",
  "sports-odds",
  "sqlite",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "httpx>=0.27.0",
  "mcp[cli]>=1.27.1",
  "pydantic>=2.7.0",
]

[project.urls]
Homepage = "https://github.com/teefloo/parions-sport-odds-mcp"
Repository = "https://github.com/teefloo/parions-sport-odds-mcp"
Issues = "https://github.com/teefloo/parions-sport-odds-mcp/issues"
Changelog = "https://github.com/teefloo/parions-sport-odds-mcp/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.8.0",
]

[project.scripts]
parions-sport-mcp = "parions_sport_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
